adding array to component ts

--- a/src/app/components/featured-users/featured-users.component.html
+++ b/src/app/components/featured-users/featured-users.component.html
@@ -1,34 +1,12 @@
 <div>
-  <ul>
-    <li>
-      <img
-        src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg"
-      />
-    </li>
-    <li>
-      <img
-        src="https://images.pexels.com/photos/2726111/pexels-photo-2726111.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-      />
-    </li>
-    <li>
-      <img
-        src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-      />
-    </li>
-    <li>
-      <img
-        src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg"
-      />
-    </li>
-    <li>
-      <img
-        src="https://images.pexels.com/photos/2726111/pexels-photo-2726111.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-      />
-    </li>
-    <li>
-      <img
-        src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-      />
-    </li>
-  </ul>
+  <div class="set-7 txt-right title">Usuarios destacados</div>
+  <div class="set-5">
+    <ul>
+      <li *ngFor="let imageUser of userData">
+        <img
+          [src]="imageUser.profileImage"
+        />
+        </li>
+    </ul>
+  </div>
 </div>
