--- a/src/app/documents/subcategory-document/subcategory-document.component.html
+++ b/src/app/documents/subcategory-document/subcategory-document.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="set-12">
-    <div class="set-6">
+    <div class="set-8">
       <breadcrumbs-component>
         <li class="breadcrumb-item">Documento madre</li>
         <li class="breadcrumb-item">Economia</li>
@@ -8,8 +8,7 @@
         <li>Empleo</li>
       </breadcrumbs-component>
     </div>
-    <div class="set-6 txt-right users-container">
-      <p>Usuarios destacados</p>
+    <div class="set-4 featured-users">
       <featured-users></featured-users>
     </div>
   </div>
