--- a/src/app/hub/components/admin-template/admin-template.component.html
+++ b/src/app/hub/components/admin-template/admin-template.component.html
@@ -63,7 +63,7 @@
             <mat-icon>front_hand</mat-icon> <small>0 Interacciones</small>
           </div>
 
-          <div class="set-12 available-layout">
+          <!-- <div class="set-12 available-layout">
             <h4 class="category-title">Esquema</h4>
             <div class="set-12" *ngIf="document.layouts.length == 0">
               <button type="button">
@@ -81,7 +81,7 @@
                 </ul>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </mat-card>
     </div>
