--- a/src/app/hub/sign-in/sign-in.component.html
+++ b/src/app/hub/sign-in/sign-in.component.html
@@ -5,7 +5,7 @@
   <form [formGroup]="signInFormGroup" (submit)="onSignIn(signInFormGroup)">
     <mat-form-field appearance="outline">
       <mat-label>Correo electrónico</mat-label>
-      <input matInput type="text" autocomplete="off" formControlName="email">
+      <input matInput type="text" formControlName="email">
     </mat-form-field>
 
     <mat-form-field appearance="outline">
