--- a/src/app/components/add-document-category/add-document-category.component.html
+++ b/src/app/components/add-document-category/add-document-category.component.html
@@ -9,22 +9,13 @@
   </div>
 </div>
 
+<div class="set-12 dialog-body" *ngIf="!isDataAvailable">
+  <mat-spinner></mat-spinner>
+</div>
+
 <div class="set-12 dialog-body" *ngIf="isDataAvailable">
   <input type="file" #file (change)="onFileSelected($event)">
   <form class="set-12" [formGroup]="addCategoryFormGroup" (submit)="onAddLayout(addCategoryFormGroup)">
-    <div class="set-9">
-      <mat-form-field appearance="outline">
-        <mat-label>Descripción</mat-label>
-        <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
-      </mat-form-field>
-    </div>
-
-    <div class="set-3">
-      <button type="button" class="upload-img" (click)="file.click()">
-        <mat-icon>add_a_photo</mat-icon>
-      </button>
-    </div>
-
     <div class="set-12 tools">
       <button type="button" (click)="toggleCategoryField()">
         <span *ngIf="!new_category">Agregar categoría</span>
@@ -40,7 +31,7 @@
         <form [formGroup]="addCategoryFormGroup" (submit)="onCreateCategory(addCategoryFormGroup)">
           <mat-form-field appearance="outline">
             <mat-label>Nombre</mat-label>
-            <input type="text" matInput formControlName="name" autocomplete="off">
+            <input type="text" matInput formControlName="category" autocomplete="off">
             <button type="submit" mat-icon-button matSuffix [disabled]="addCategoryFormGroup.invalid"
               matTooltip="Guardar categoría" matTooltipClass="tooltip" matTooltipPosition="left">
               <mat-icon>save</mat-icon>
@@ -72,6 +63,19 @@
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
+    </div>
+
+    <div class="set-9">
+      <mat-form-field appearance="outline">
+        <mat-label>Descripción</mat-label>
+        <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
+      </mat-form-field>
+    </div>
+
+    <div class="set-3">
+      <button type="button" class="upload-img" (click)="file.click()">
+        <mat-icon>add_a_photo</mat-icon>
+      </button>
     </div>
 
     <div class="set-12 ctrls">
