--- a/src/app/components/breadcrumbs/breadcrumbs.component.scss
+++ b/src/app/components/breadcrumbs/breadcrumbs.component.scss
@@ -4,11 +4,12 @@
     align-items: flex-start;
     justify-content: flex-start;
     margin: 0;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
     margin-top: 0;
     padding: 0;
+    font-size: 9pt;
 
-    > * {
+    >* {
       margin: 0;
       display: inline;
       margin-right: 0.2em;
