--- a/src/app/documents/single-document/single-document.component.scss
+++ b/src/app/documents/single-document/single-document.component.scss
@@ -15,15 +15,24 @@
 
   .imghldr {
     min-height: 150px;
+    max-height: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
     background: rgba($color: #CEDDFF, $alpha: 0.4);
     border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
+    overflow: hidden;
 
     mat-icon {
       font-size: 70pt;
       color: rgba($color: #000000, $alpha: 0.1);
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      object-fit: contain;
     }
   }
 
@@ -59,7 +68,7 @@
   }
 
   button.mini {
-    margin-left: 40px;
+    margin-left: 20px;
 
     mat-icon {
       font-size: 14pt !important;
@@ -185,15 +194,6 @@
 
     /* CATEGORIES TABLE */
     .categories-table {
-
-      // tr {
-
-      //   th:first-child,
-      //   td:first-child {
-      //     text-align: left !important;
-      //   }
-      // }
-
       th.mat-header-cell:first-of-type {
         padding: 0 !important;
       }
