--- a/src/app/hub/components/admin-template/admin-template.component.scss
+++ b/src/app/hub/components/admin-template/admin-template.component.scss
@@ -67,11 +67,13 @@
 
   .imghldr {
     min-height: 150px;
+    max-height: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
     background: rgba($color: #CEDDFF, $alpha: 0.4);
     border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
+    overflow: hidden;
 
     mat-icon {
       font-size: 70pt;
