--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -162,9 +162,10 @@
                 <mat-icon class="icon-warnings">warning</mat-icon>
               </p>
 
-              <button type="button" mat-mini-fab class="add-problem" matTooltip="Agregar tema" (click)="popAddDocumentTheme()">
+              <button type="button" mat-mini-fab class="add-problem" matTooltip="Agregar tema"
+                (click)="popAddDocumentTheme()">
                 <mat-icon>add_circle</mat-icon>
-              </button> 
+              </button>
             </div>
 
             <ol class="top-list">
