--- a/src/app/components/add-document-theme/add-document-theme.component.html
+++ b/src/app/components/add-document-theme/add-document-theme.component.html
@@ -3,7 +3,7 @@
     <h3>Agregar Problema</h3>
   </div>
   <div class="set-3 txt-right">
-    <button type="button" mat-icon-button color="primary"  (click)="killDialog()">
+    <button type="button" mat-icon-button color="primary" (click)="killDialog()">
       <mat-icon>cancel</mat-icon>
     </button>
   </div>
@@ -14,55 +14,30 @@
 </div> -->
 
 <div class="set-12 dialog-body">
-  <form [formGroup]="addThemeFormGroup" (submit)="onCreateCategory()">
-    <input
-      type="text"
-      matInput
-      placeholder="Título del problema"
-      autocomplete="off"
-      class="title-box"
-      formControlName="title"
-    />
+  <form [formGroup]="addThemeFormGroup" (submit)="onCreateTopic(addThemeFormGroup)">
+    <input type="text" matInput placeholder="Título del problema" autocomplete="off" class="title-box"
+      formControlName="title" />
 
     <div class="second-line">
-      <textarea
-        matInput
-        placeholder="Escribe una descripción"
-        formControlName="description"
-      ></textarea>
+      <textarea matInput placeholder="Escribe una descripción" formControlName="description"></textarea>
 
       <div class="imagebox">
         <label [ngClass]="imageUrl ? 'data' : 'empty'">
           <mat-icon>photo_camera</mat-icon>
           <span>Subir imagen</span>
-          <input
-            type="file"
-            accept="image/*"
-            (change)="handleSelectImage($event)"
-            formControlName="image"
-          />
+          <input type="file" accept="image/*" (change)="handleSelectImage($event)" formControlName="image" />
         </label>
 
-        <img
-          class="preview"
-          [src]="imageUrl"
-          alt="img_upload"
-          [ngClass]="imageUrl ? 'data' : 'empty'"
-        />
+        <img class="preview" [src]="imageUrl" alt="img_upload" [ngClass]="imageUrl ? 'data' : 'empty'" />
       </div>
     </div>
 
     <div>
-      <textarea
-        matInput
-        placeholder="Escribe una solución"
-        class="solution-box"
-        formControlName="solution"
-      ></textarea>
+      <textarea matInput placeholder="Escribe una solución" class="solution-box" formControlName="solution"></textarea>
     </div>
 
     <div class="set-12 ctrls">
-      <button type="submit" mat-raised-button color="primary">
+      <button type="submit" mat-raised-button color="primary" [disabled]="addThemeFormGroup.invalid">
         Agregar problematica
       </button>
     </div>
