--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -142,13 +142,7 @@
 
             <ol class="top-list">
               <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-              <li class="top-list-item">
-                <span>Inseguridad</span>
+                <small>NA</small>
               </li>
             </ol>
           </mat-card>
@@ -169,14 +163,8 @@
             </div>
 
             <ol class="top-list">
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-              <li class="top-list-item">
-                <span>Inseguridad</span>
+              <li class="top-list-item" *ngFor="let topic of selectedCategory.topics">
+                <small>{{topic.title}}</small>
               </li>
             </ol>
           </mat-card>
@@ -250,7 +238,7 @@
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
-              <button mat-icon-button [matMenuTriggerFor]="menu">
+              <button mat-icon-button [matMenuTriggerFor]="menu" disabled>
                 <mat-icon>more_vert</mat-icon>
               </button>
 
