--- a/src/app/components/featured-users/featured-users.component.scss
+++ b/src/app/components/featured-users/featured-users.component.scss
@@ -1,5 +1,3 @@
-
-
 ul {
   list-style-type: none;
   margin: 0;
@@ -7,8 +5,8 @@ ul {
 }
 
 li {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   border: 2px solid white;
   display: inline-block;
@@ -16,15 +14,33 @@ li {
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2);
   -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
-  img {
-    width: 30px;
-    height: 30px;
+  img{
+    width: 35px;
+    height: 35px;
+  }
+  .profileImage {
     object-fit: cover;
     border-radius: 100px;
   }
+  .moreUsers {
+    width: 35px;
+    height: 35px;
+    background: #D9D9D9;
+    position: absolute;
+    border-radius: 100px;
+  }
+  .moreUsersImage {
+    position: absolute;
+    width: 20px;
+    height: 14px;
+    left: 21.88%;
+    right: 21.88%;
+    top: 21.88%;
+    bottom: 21.88%;
+  }
 }
 .title {
-  padding-top: 5px;
+  padding-top: 10px;
   padding-right: 10px;
   font-size: 14px;
   font-weight: 500;
