--- a/src/app/components/featured-users/featured-users.component.html
+++ b/src/app/components/featured-users/featured-users.component.html
@@ -3,24 +3,22 @@
   <div class="set-5">
     <ul>
       <div
-        *ngFor="let imageUser of userData; trackBy: trackByFn;let indexUser=index; "
+        *ngFor="let imageUser of visibleUsers; trackBy: trackByFn;let indexUser=index; "
       >
-        <div class="set-2" *ngIf="indexUser<5; else elseBlock">
-          <li>
-            <img class="profileImage" [src]="imageUser.profileImage" />
-          </li>
-        </div>
-        <ng-template #elseBlock>
-          <div class="set-1" *ngIf=" indexUser ===6">
-            <li>
-              <div>
-                <div class="moreUsers">
-                  <img class="moreUsersImage" src='/assets/images/groupUser.png' />
-                </div>
-              </div>
-            </li>
+      <div class="set-2">
+        <li >
+          <img class="profileImage" [src]="imageUser.profileImage" />
+        </li>
+      </div>
+      </div>
+      <div class="set-1" *ngIf=" userQuantity >5">
+        <li>
+          <div>
+            <div class="moreUsers">
+              <img class="moreUsersImage" src="/assets/images/groupUser.png" />
+            </div>
           </div>
-        </ng-template>
+        </li>
       </div>
     </ul>
   </div>
