amount of visible users

--- a/src/app/documents/subcategory-document/subcategory-document.component.html
+++ b/src/app/documents/subcategory-document/subcategory-document.component.html
@@ -9,7 +9,7 @@
       </breadcrumbs-component>
     </div>
     <div class="set-4 featured-users">
-      <featured-users></featured-users>
+      <featured-users [inputAmount]="5"></featured-users>
     </div>
   </div>
 
