about data and images

--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -19,7 +19,6 @@
           mat-mini-fab
           class="mini test"
           matTooltip="Agregar testimonio"
-          disabled
         >
           <mat-icon>forum</mat-icon>
         </button>
@@ -31,7 +30,6 @@
           mat-mini-fab
           class="mini warn"
           matTooltip="Agregar problema"
-          disabled
         >
           <mat-icon>warning</mat-icon>
         </button>
@@ -44,13 +42,80 @@
           type="button"
           mat-mini-fab
           class="mini insights"
-          matTooltip="Agregar Categoría"
+          matTooltip="Agregar Solución"
         >
           <mat-icon>insights</mat-icon>
         </button>
 
         <p>Agregar Solución</p>
       </div>
+    </div>
+  </div>
+
+  <div class="body">
+    <mat-card class="about-card">
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>Título</mat-label>
+        <input
+          matInput
+          placeholder="Título del tema"
+          [value]="themeData.title"
+        />
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>Descripción</mat-label>
+        <textarea matInput placeholder="Descripción del tema"></textarea>
+      </mat-form-field>
+
+      <div class="render-images">
+        <img
+          *ngFor="let image of imageToUpload"
+          class="item"
+          alt="img-list"
+          [src]="image"
+        />
+
+        <img
+          *ngFor="let image of themeData.images"
+          class="item"
+          alt="img-list"
+          [src]="image"
+        />
+
+        <label class="item">
+          <mat-icon color="primary">add_circle</mat-icon>
+          <input
+            type="file"
+            accept="image/*"
+            id="addImageInput"
+            (change)="handleSelectImage($event)"
+            multiple
+          />
+        </label>
+      </div>
+
+      <avatars-row></avatars-row>
+    </mat-card>
+
+    <div class="table-card">
+
+      <div>
+        <mat-form-field appearance="outline">
+          <mat-label>Cobertura</mat-label>
+          <mat-select multiple>
+            <mat-option *ngFor="let state of states">
+              <small>{{ state.name }}</small>
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <mat-card>
+        <div>
+          <p>TABLA</p>
+        </div>
+      </mat-card>
     </div>
   </div>
 </div>
