--- a/src/app/documents/single-theme/single-theme.component.scss
+++ b/src/app/documents/single-theme/single-theme.component.scss
@@ -15,7 +15,6 @@
       margin: 0;
     }
 
-
     .actions-rigth {
       display: flex;
       justify-content: center;
@@ -46,6 +45,53 @@
       mat-icon {
         color: #fff;
       }
+    }
+  }
+
+  .body {
+    display: grid;
+    column-gap: 15pt;
+    grid-template-columns: repeat(8, 1fr);
+    margin-top: 15pt;
+
+    .about-card {
+      grid-column: 1 / span 3;
+      width: 100%;
+
+      textarea {
+        height: 80px;
+      }
+
+      .render-images {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+
+        align-items: center;
+
+        > * {
+          margin: 0;
+        }
+
+        .item {
+          margin: 5pt;
+          width: 50pt;
+          height: 50pt;
+          object-fit: cover;
+          border-radius: 5px;
+        }
+
+        label.item {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+    }
+
+    .table-card {
+      grid-column: 4 / span 3;
+      width: 100%;
     }
   }
 }
