Load Public page, load map, show more button, panel circles

--- a/src/app/components/map-box/map-box.component.html
+++ b/src/app/components/map-box/map-box.component.html
@@ -16,7 +16,7 @@
             [id]="statePath.id"
             [title]="statePath.title"
             [attr.d]="statePath.d"
-            [ngClass]="activeState === statePath.id ? 'active' : ''"
+            [ngClass]="activeState.includes(statePath.id) ? 'active' : ''"
           />
         </g>
       </svg>
