--- a/src/app/documents/selected-public-document/selected-public-document.component.html
+++ b/src/app/documents/selected-public-document/selected-public-document.component.html
@@ -24,7 +24,7 @@
         <div class="horizontal-stats"></div>
       </div>
       <div class="set-12" style="margin-top: 10px;">
-        <div class="app-map-box"></div>
+        <app-map-box></app-map-box>
       </div>
     </div>
     <div class="right">
