--- a/src/app/documents/public-document/public-document.component.html
+++ b/src/app/documents/public-document/public-document.component.html
@@ -5,7 +5,7 @@
     <li>Documentos</li>
   </breadcrumbs-component>
 
-  <div class="set-12" style="padding-bottom: 100px">
+  <div class="set-12" style="padding-bottom: 100px"  *ngIf="document">
     <div class="set-4 col-rgt-3">
       <mat-card class="doc-description">
         <div class="imghldr">
@@ -17,20 +17,21 @@
           />
         </div>
         <div class="infohldr">
-          <p class="card-title">MATRIZ CIUDADANA</p>
-          <p class="card-description">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry
-          </p>
-          <span class="card-description link">Leer más</span>
+          <p class="card-title">{{ document.title }}</p>
+          <expanded-text
+            [text]="document.description"
+            [minLength]="200"
+          ></expanded-text>
         </div>
       </mat-card>
       <div class="horizontal-stats mt-2"></div>
-      <div class="app-map-box mt-2"></div>
+      <div class="mt-2">
+        <app-map-box [data]="document.coverage" class="mt-2"></app-map-box>
+      </div>
     </div>
     <div class="set-8">
       <div class="main-box">
-        <div class="main shadow"></div>
+        <panel-circles [data]="categoriesData"></panel-circles>
       </div>
       <div class="mt-2">
         <div class="select">
