--- a/src/app/components/panel-circles/panel-circles.component.scss
+++ b/src/app/components/panel-circles/panel-circles.component.scss
@@ -6,6 +6,7 @@
   background-size: 30px 30px;
   border-radius: 5px 5px 0px 0px;
   padding: 40px;
+  background-color: white;
   .random-text {
     position: absolute;
     span {
