--- a/src/app/documents/category-public-document/category-public-document.component.scss
+++ b/src/app/documents/category-public-document/category-public-document.component.scss
@@ -59,6 +59,10 @@
           border: 1px solid #a5a5a5;
           border-radius: 5px;
         }
+        .select {
+          margin-right: auto;
+          margin-left: 15px;
+        }
       }
       .button {
         width: 100%;
