--- a/src/app/documents/public-document/public-document.component.html
+++ b/src/app/documents/public-document/public-document.component.html
@@ -30,9 +30,7 @@
       </div>
     </div>
     <div class="set-8">
-      <div class="main-box">
-        <panel-circles [data]="categoriesData"></panel-circles>
-      </div>
+      <panel-circles [data]="categoriesData" class="main-box "></panel-circles>
       <div class="mt-2">
         <div class="select">
           <select required>
