--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -151,5 +151,19 @@
         </table>
       </mat-card>
     </div>
+
+    <mat-card class="donut-card">
+      <p>Título de gráfica</p>
+    </mat-card>
+
+    <mat-card class="bars-card">
+      <p>Título de gráfica</p>
+    </mat-card>
+
+
+    <mat-card class="circle-card">
+      <p>Título de gráfica</p>
+    </mat-card>
+
   </div>
 </div>
