--- a/src/app/components/add-document-dialog/add-document-dialog.component.scss
+++ b/src/app/components/add-document-dialog/add-document-dialog.component.scss
@@ -21,11 +21,14 @@
   }
 
   form {
-    .set-7 {
+
+    .set-7,
+    .set-8 {
       padding-right: 10px;
     }
 
-    .set-4 {
+    .set-4,
+    .set-5 {
       padding-left: 10px;
     }
 
