--- a/src/app/components/add-document-layout/add-document-layout.component.scss
+++ b/src/app/components/add-document-layout/add-document-layout.component.scss
@@ -19,6 +19,11 @@
   .step-content {
     margin-top: 20px;
 
+    form {
+      display: flex;
+      flex: 1;
+    }
+
     textarea {
       min-height: 100px;
       max-height: 100px;
@@ -32,6 +37,7 @@
       display: flex;
       width: 100%;
       min-height: 100px;
+      height: calc(100% - 20px);
       align-items: center;
       justify-content: center;
       border: 1px dashed rgba($color: #000000, $alpha: 0.1);
