--- a/src/app/hub/components/admin-template/admin-template.component.html
+++ b/src/app/hub/components/admin-template/admin-template.component.html
@@ -41,11 +41,11 @@
               <button type="button" matTooltip="Editar">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button type="button" matTooltip="Abrir" (click)="linkMe(document._id)">
+              <button type="button" matTooltip="Abrir" (click)="linkMe('/documentos/' + document._id)">
                 <mat-icon>file_open</mat-icon>
               </button>
               <button type="button" matTooltip="Datos" (click)="displayDocumentData(document._id)">
-                <mat-icon>bubble_chart</mat-icon>
+                <mat-icon>pie_chart</mat-icon>
               </button>
             </div>
           </div>
@@ -61,6 +61,20 @@
           <div class="set-12 card-row counts">
             <mat-icon>person</mat-icon> <small>{{document.collaborators.length}} Usuarios</small>
             <mat-icon>front_hand</mat-icon> <small>0 Interacciones</small>
+          </div>
+
+          <div class="set-12 available-layout" *ngIf="document.layouts.length != 0">
+            <h4 class="category-title">Categorías</h4>
+            <div class="set-12" *ngFor="let layout of document.layouts">
+              <ul>
+                <li>
+                  <button type="button" (click)="linkMe('/documentos/' + document._id + '/categoria/' + layout._id)"
+                    matTooltip="Abrir categoría" matTooltipClass="tooltip" matTooltipPosition="right">
+                    <small>{{layout.category.name}}</small>
+                  </button>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </mat-card>
