--- a/src/app/hub/components/editor-template/editor-template.component.scss
+++ b/src/app/hub/components/editor-template/editor-template.component.scss
@@ -72,6 +72,14 @@
     ul {
       list-style-position: inside;
     }
+
+    button {
+      transition: all .2s linear;
+    }
+
+    button:hover {
+      color: #306EFF;
+    }
   }
 
   .imghldr {
