--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -156,10 +156,10 @@
                 <mat-icon class="icon-warnings">warning</mat-icon>
               </p>
 
-              <button type="button" mat-mini-fab class="add-problem" matTooltip="Agregar tema"
+              <!--button type="button" mat-mini-fab class="add-problem" matTooltip="Agregar tema"
                 (click)="popAddDocumentTheme()">
                 <mat-icon>add_circle</mat-icon>
-              </button>
+              </button-->
             </div>
 
             <ol class="top-list">
@@ -238,19 +238,19 @@
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
-              <button mat-icon-button [matMenuTriggerFor]="menu" disabled>
+              <button mat-icon-button [matMenuTriggerFor]="menu">
                 <mat-icon>more_vert</mat-icon>
               </button>
 
               <mat-menu #menu="matMenu">
-                <button mat-menu-item>
+                <button mat-menu-item (click)="popAddDocumentTheme()">
                   <mat-icon>add_circle</mat-icon>
                   <span>Agregar problematica</span>
                 </button>
-                <button mat-menu-item (click)="handleDeleteProblem(element.id)">
+                <!--button mat-menu-item (click)="handleDeleteProblem(element.id)">
                   <mat-icon>cancel</mat-icon>
                   <span>Eliminar</span>
-                </button>
+                </button-->
               </mat-menu>
             </td>
           </ng-container>
