--- a/src/app/documents/single-theme/single-theme.component.scss
+++ b/src/app/documents/single-theme/single-theme.component.scss
@@ -50,24 +50,19 @@
 
   .body {
     display: grid;
-    column-gap: 15pt;
-    row-gap: 20pt;
-    grid-template-columns: repeat(8, 1fr);
+    column-gap: 25pt;
+    row-gap: 25pt;
+    grid-template-columns: repeat(2, 1fr);
     margin-top: 15pt;
 
-    .about-card {
-      grid-column: 1 / span 3;
+    .images-card {
+      grid-column: 1 / span 1;
       width: 100%;
 
-      textarea {
-        height: 80px;
-      }
-
       .render-images {
-        width: 100%;
+        width: 1800px;
+        height: 100%;
         display: flex;
-        flex-wrap: wrap;
-
         align-items: center;
 
         > * {
@@ -76,22 +71,33 @@
 
         .item {
           margin: 5pt;
-          width: 50pt;
-          height: 50pt;
+          width: 150px;
+          height: 100%;
           object-fit: cover;
           border-radius: 5px;
         }
 
         label.item {
           display: flex;
+          min-width: 150px;
           align-items: center;
           justify-content: center;
         }
       }
     }
 
+    .about-card {
+
+      grid-column: 2 / span 1;
+      width: 100%;
+
+      textarea {
+        height: 80px;
+      }
+    }
+
     .table-card {
-      grid-column: 4 / span 3;
+      grid-column: 1 / span 1;
       width: 100%;
 
       .mat-column-title {
@@ -125,15 +131,15 @@
 
     .donut-card {
       width: 100%;
-      grid-column: 1 / span 2;
+      grid-column: 2 / span 1;
     }
     .bars-card {
       width: 100%;
-      grid-column-end: span 3;
+      grid-column: 2 / span 1;
     }
     .circle-card {
       width: 100%;
-      grid-column-end: span 2;
+      grid-column: 2 / span 1;
     }
   }
 }
